<resources>
    <string name="app_name">XetNghiem</string>

    <!--Invalid -->
    <string name="error_invalid_phone">Số điện thoại không hợp lệ, bạn vui lòng thử lại</string>
    <string name="error_invalid_username">Số điện thoại hoặc email không hợp lệ, bạn vui lòng thử lại</string>
    <string name="error_invalid_password">Mật khẩu không hợp lệ, bạn vui lòng thử lại</string>
    <string name="error_invalid_confirm_password">Mật khẩu nhập lại không hợp lệ</string>
    <string name="error_invalid_name">Tên không hợp lệ, bạn vui lòng thử lại</string>
    <string name="error_invalid_address">Địa chỉ không hợp lệ, bạn vui lòng thử lại</string>

    <string name="label_birthday_quickbook">Ngày đặt</string>
    <string name="drawer_item_persistent_compact_header1">Ngày đặt</string>
    <string name="label_birthday_register">Ngày sinh</string>
    <string name="label_address_quickbook">Địa chỉ</string>
    <string name="label_button_register">Đăng kí</string>
    <string name="label_button_update">Cập Nhật</string>
    <string name="label_button_change_password">Đổi mật khẩu</string>
    <string name="label_button_change_phone">Đổi số điện thoại</string>
    <string name="error_">Đăng kí</string>
    <string name="error_server">Lỗi server</string>
    <string name="label_error_birthday">Ngày sinh không hợp lệ</string>
    <string name="label_error_appnt_date">Ngày đặt không hợp lệ</string>
    <!--Loading dialog-->
    <string name="waiting_msg">Xin vui lòng chờ...</string>
    <string name="dialog_cancel">Bạn đã hủy</string>
    <string name="dialog_default_title">Thông báo</string>
    <string name="label_phone_bookappt">Số điện thoại</string>
    <string name="label_email_bookappt">Email</string>
    <string name="label_account">Số điện thoại hoặc email</string>
    <string name="label_fullname_quickbook">Tên</string>
    <string name="label_date_bookapt">Ngày hẹn</string>
    <string name="label_time_bookapt">Thời gian</string>
    <string name="label_content_bookapt">Nội dung</string>
    <string name="label_suggest_register">Bạn chưa có tài khoản? Đăng kí tại đây</string>
    <string name="label_button_bookapt">Đặt lịch</string>
    <string name="label_password">Mật khẩu</string>
    <string name="label_password_promt">Nhập mật khẩu</string>
    <string name="label_new_password_promt">Nhập mật khẩu mới</string>
    <string name="label_current_password_promt">Nhập mật khẩu hiện tại</string>
    <string name="label_confirm_password_promt">Nhập lại mật khẩu</string>
    <string name="label_confirm_new_password_promt">Nhập lại mật khẩu mới</string>
    <string name="label_button_login">Đăng nhập</string>
    <string name="action_sign_in_short">Đăng Nhập</string>
    <!-- Quick register section -->
    <string name="tv_quickbook">Đặt lịch nhanh</string>
    <string name="tv_promt_fullname">Họ và tên</string>
    <string name="tv_promt_phone">Số điện thoại</string>
    <string name="tv_promt_content">Nội dung</string>
    <string name="btn_quickbook">Đặt Lịch</string>
    <string name="OK">Đồng ý</string>
    <string name="Cancel">Hủy</string>

    <!-- My Accout fragment -->
    <string name="my_acc_phone_label">Số điện thoại</string>
    <string name="my_acc_password_label">Mật khẩu</string>
    <string name="my_acc_password_text_view">**********</string>
    <string name="my_acc_gender_label">Giới tính</string>
    <string name="my_acc_address_label">Địa chỉ</string>
    <string name="my_acc_birthday_label">Ngày sinh</string>
    <string name="my_acc_edit_button">Chỉnh sửa tài khoản</string>
    <string name="my_acc_logout_button">Đăng xuất</string>
    <string name="my_acc_district_text">Quận</string>
    <string name="my_acc_city_text">Thành phố</string>
    <string name="edit_pass_title">Chỉnh Sửa Mật Khẩu</string>
    <!-- Edit Accout Activity -->
    <string name="edit_acc_title">Chỉnh Sửa Tài Khoản</string>
    <string name="edit_acc_update_button">Cập Nhật</string>

    <string name="label_content_feedback">Góp Ý</string>
    <string name="label_question_feedback">Bạn thấy dịch vụ của chúng tôi như thế nào?</string>
    <string name="error_message_api">Có vẻ như đã có lỗi xảy ra, vui lòng thử lại.</string>
    <string name="success_message_api">Cập Nhật Thành Công</string>
    <string name="error_on_error_when_call_api">Không thể kết nối đến máy chủ</string>
    <string name="title_activity_appointment_list">AppointmentListActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
