<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content" >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context="com.dentalclinic.capstone.activities.RegisterActivity">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_fullname_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/padding_control"
                    android:drawableStart="@drawable/ic_account_circle_black_24dp"
                    android:hint="@string/tv_promt_fullname"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/edittext_size_medium" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_control">

                <EditText
                    android:id="@+id/edt_phone_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_phone_iphone_black_24dp"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/label_phone_bookappt"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textSize="@dimen/edittext_size_medium" />
            </android.support.design.widget.TextInputLayout><android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_control">

                <EditText
                    android:id="@+id/edt_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/label_email_bookappt"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textSize="@dimen/edittext_size_medium" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_control">

                <EditText
                    android:id="@+id/edt_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                    android:hint="@string/label_password_promt"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="@dimen/edittext_size_medium" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/margin_control">

                <EditText
                    android:id="@+id/edt_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:drawableStart="@drawable/ic_credit_card_black_24dp"
                    android:hint="Chứng minh nhân dân"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:textSize="@dimen/edittext_size_medium" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_register"
                style="@style/custom_button_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/label_button_register" />
        </LinearLayout>
</LinearLayout>