
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
<ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:fillViewport="true"
    tools:context=".activities.LoginActivity">


        <!-- Login progress -->


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">
                <ImageView
                    android:visibility="invisible"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/common_google_signin_btn_icon_dark"/>
                 <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <AutoCompleteTextView
                        android:id="@+id/txt_phone_loginact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_phone_iphone_black_24dp"
                        android:hint="@string/label_account"
                        android:imeOptions="actionNext" 
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/edittext_size_medium" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                        android:hint="@string/label_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="@dimen/edittext_size_medium" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/txt_error_server_loginact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/error_label" />


                <Button
                    android:id="@+id/btn_signin_loginact"
                    style="@style/custom_button_blue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_button_login" />

                <TextView
                    android:id="@+id/tv_link_register"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:linksClickable="true"
                    android:text="@string/label_suggest_register"
                    android:textColor="@color/color_light_blue_a400" />

                <TextView
                    android:id="@+id/tv_link_forgot_password"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:clickable="true"
                    android:visibility="gone"
                    android:gravity="center_horizontal"
                    android:linksClickable="true"
                    android:text="Bạn quên mật khẩu?"
                    android:textColor="@color/color_light_blue_a400" />
            </LinearLayout>
        </RelativeLayout>
</ScrollView>
</LinearLayout>