<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.EditAccoutActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_control">

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_account_circle_black_24dp"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:hint="@string/tv_promt_fullname"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="@dimen/edittext_size_medium" />
            </android.support.design.widget.TextInputLayout>

            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/margin_control">-->
            <!--<EditText-->
            <!--android:id="@+id/edt_phone_register"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:drawableLeft="@drawable/ic_phone_iphone_black_24dp"-->
            <!--android:drawablePadding="@dimen/drawable_padding"-->
            <!--android:hint="@string/label_phone_quickbook"-->
            <!--android:imeOptions="actionNext"-->
            <!--android:inputType="text"-->
            <!--android:maxLines="1" />-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->

            <!--android:layout_marginTop="@dimen/margin_control">-->

            <!--<EditText-->
            <!--android:id="@+id/edt_password_register"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:drawableLeft="@drawable/ic_lock_outline_black_24dp"-->
            <!--android:drawablePadding="@dimen/drawable_padding"-->
            <!--android:hint="@string/label_password_promt"-->
            <!--android:imeOptions="actionNext"-->
            <!--android:inputType="textPassword"-->
            <!--android:maxLines="1" />-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->

            <!--android:layout_marginTop="@dimen/margin_control">-->

            <!--<EditText-->
            <!--android:id="@+id/edt_confirm_password_register"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:drawableLeft="@drawable/ic_lock_outline_black_24dp"-->
            <!--android:drawablePadding="@dimen/drawable_padding"-->
            <!--android:hint="@string/label_confirm_password_promt"-->
            <!--android:imeOptions="actionNext"-->
            <!--android:inputType="textPassword"-->
            <!--android:maxLines="1" />-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <RadioGroup
                android:id="@+id/rg_gender_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <RadioButton
                    android:id="@+id/rbt_male_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:text="Nam" />

                <RadioButton
                    android:id="@+id/rbt_female_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:text="Nữ" />

                <RadioButton
                    android:id="@+id/rbt_others_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:text="Khác" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:id="@+id/txt_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_date_range_black_24dp"
                    android:drawablePadding="9dp"
                    android:focusable="true"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/label_birthday_register"
                    android:textColor="@color/color_black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txt_error_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:gravity="left"
                    android:paddingStart="9dp"
                    android:text=""
                    android:textColor="@color/error_label" />
            </LinearLayout>

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:weightSum="100">-->

            <!--<Spinner-->
            <!--android:id="@+id/spinner_city_register"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="50">-->

            <!--</Spinner>-->

            <!--<Spinner-->
            <!--android:id="@+id/spinner_district_register"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="50"-->

            <!--&gt;-->

            <!--</Spinner>-->
            <!--</LinearLayout>-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <AutoCompleteTextView
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|left"
                    android:drawableLeft="@drawable/ic_home_black_24dp"
                    android:drawablePadding="9dp"
                    android:hint="@string/label_address_quickbook"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="4"
                    android:minLines="1"
                    android:paddingStart="6dp"
                    android:singleLine="true"
                    android:textSize="@dimen/edittext_size_medium" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spinner_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <Spinner
                android:id="@+id/spinner_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <Button
                android:id="@+id/btn_register"
                style="@style/custom_button_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="26dp"
                android:text="Đồng ý" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>